// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform with head basic 1`] = `
"<script context=\\"module\\">
export const frontmatter = {\\"title\\":\\"Hey\\"}
</script>
<script>

</script>
<svelte:head>
<title>Hey</title>
<meta property=\\"og:title\\" content=\\"Hey\\">
</svelte:head>
<div class=\\"markdown-body\\"><h1>Hello</h1>
<ul>
<li>A</li>
<li>B</li>
<li>C</li>
</ul>
</div>"
`;

exports[`transform with head head tag 1`] = `
"<script context=\\"module\\">
export const frontmatter = {\\"title\\":\\"Hey\\"}
</script>
<script>

	import MyComponent from '$lib/MyComponent.svelte';

</script>
<svelte:head>

<meta name=\\"description\\" content=\\"Bar\\" />

<title>Hey</title>
<meta property=\\"og:title\\" content=\\"Hey\\">
</svelte:head>
<div class=\\"markdown-body\\"><h1>Hello</h1>
<ul>
<li>A</li>
<li>B</li>
<li>C</li>
</ul>

<p></p>
<MyComponent /></div>"
`;
